@@ -26,6 +26,7 @@ package net.kyori.adventure.platform.test.fabric;
 import com.google.common.base.Strings;
 import com.mojang.brigadier.Command;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
+import com.mojang.logging.LogUtils;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -45,7 +46,6 @@ import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.ModInitializer;
@@ -61,7 +61,6 @@ import net.kyori.adventure.inventory.Book;
 import net.kyori.adventure.key.Key;
 import net.kyori.adventure.platform.fabric.AdventureCommandSourceStack;
 import net.kyori.adventure.platform.fabric.ComponentArgumentType;
-import net.kyori.adventure.platform.fabric.FabricClientAudiences;
 import net.kyori.adventure.platform.fabric.FabricServerAudiences;
 import net.kyori.adventure.platform.fabric.KeyArgumentType;
 import net.kyori.adventure.sound.Sound;
@@ -79,10 +78,9 @@ import net.minecraft.commands.synchronization.SuggestionProviders;
 import net.minecraft.network.chat.TextComponent;
 import net.minecraft.server.MinecraftServer;
 import net.minecraft.server.level.ServerPlayer;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.slf4j.Logger;
 
 import static com.mojang.brigadier.arguments.IntegerArgumentType.getInteger;
 import static com.mojang.brigadier.arguments.IntegerArgumentType.integer;
@@ -103,13 +101,13 @@ import static net.minecraft.commands.arguments.EntityArgument.getPlayers;
 import static net.minecraft.commands.arguments.EntityArgument.players;
 
 public class AdventureTester implements ModInitializer {
-  public static final Logger LOGGER = LogManager.getLogger();
+  public static final Logger LOGGER = LogUtils.getLogger();
   private static final Key FONT_MEOW = key("adventure", "meow");
   private static final Key FONT_IOSEVKA = key("adventure", "iosevka");
 
   private static final List<TextColor> LINE_COLOURS = IntStream.of(0x9400D3, 0x4B0082, 0x0000FF, 0x00FF00, 0xFFFF00, 0xFF7F00, 0xFF0000,
     0x55CDFC, 0xF7A8B8, 0xFFFFFF, 0xF7A8B8, 0x55CDFC)
-    .mapToObj(TextColor::color).collect(Collectors.toList());
+    .mapToObj(TextColor::color).toList();
   private static final Component LINE = text(Strings.repeat("█", 10));
 
   private static final String ARG_TEXT = "text";
@@ -149,16 +147,16 @@ public class AdventureTester implements ModInitializer {
     CommandRegistrationCallback.EVENT.register((dispatcher, dedicated) -> {
       dispatcher.register(literal("adventure")
         .then(literal("about").executes(ctx -> {
-          final Audience audience = this.adventure().audience(ctx.getSource());
-          audience.sendMessage(Identity.nil(), translatable("adventure.test.welcome", COLOR_RESPONSE, this.adventure().toAdventure(ctx.getSource().getDisplayName())));
-          audience.sendMessage(Identity.nil(), translatable("adventure.test.description", color(0xc022cc)));
+          // Interface injection, this lets us access the default platform instance
+          ctx.getSource().sendMessage(Identity.nil(), translatable("adventure.test.welcome", COLOR_RESPONSE, ctx.getSource().getDisplayName()));
+          // Or the old-fashioned way, for
+          this.adventure().audience(ctx.getSource()).sendMessage(Identity.nil(), translatable("adventure.test.description", color(0xc022cc)));
           return 1;
         }))
         .then(literal("echo").then(argument(ARG_TEXT, ComponentArgumentType.miniMessage()).executes(ctx -> {
-          final AdventureCommandSourceStack source = this.adventure().audience(ctx.getSource());
           final Component result = component(ctx, ARG_TEXT);
-          source.sendMessage(source, result);
-          this.adventure().audience(ctx.getSource()).sendMessage(text("And a second time!", NamedTextColor.DARK_PURPLE));
+          ctx.getSource().sendMessage(ctx.getSource(), result);
+          ctx.getSource().sendMessage(text("And a second time!", NamedTextColor.DARK_PURPLE));
           return 1;
         })))
         .then(literal("countdown").then(argument(ARG_SECONDS, integer()).executes(ctx -> { // multiple boss bars!
@@ -176,7 +174,7 @@ public class AdventureTester implements ModInitializer {
           final Collection<ServerPlayer> targets = getPlayers(ctx, ARG_TARGETS);
           final AdventureCommandSourceStack source = this.adventure().audience(ctx.getSource());
           final Component message = component(ctx, ARG_TEXT);
-          final Audience destination = this.adventure().audience(targets);
+          final Audience destination = Audience.audience(targets);
 
           destination.sendMessage(source, message);
           source.sendMessage(Identity.nil(), text(b -> {
@@ -194,8 +192,7 @@ public class AdventureTester implements ModInitializer {
           return 1;
         })))
         .then(literal("book").executes(ctx -> {
-          final Audience viewer = this.adventure().audience(ctx.getSource());
-          viewer.openBook(Book.builder()
+          ctx.getSource().openBook(Book.builder()
             .title(text("My book", NamedTextColor.RED))
             .author(text("The adventure team", COLOR_RESPONSE))
             .addPage(text("Welcome to our rules page"))
@@ -204,16 +201,15 @@ public class AdventureTester implements ModInitializer {
           return 1;
         }))
         .then(literal("rgb").executes(ctx -> {
-          final Audience viewer = this.adventure().audience(ctx.getSource());
           for (final TextColor color : LINE_COLOURS) {
-            viewer.sendMessage(Identity.nil(), LINE.color(color));
+            ctx.getSource().sendMessage(Identity.nil(), LINE.color(color));
           }
           return Command.SINGLE_SUCCESS;
         }))
         .then(literal("baron").executes(ctx -> {
           final ServerPlayer player = ctx.getSource().getPlayerOrException();
           final BossBar greeting = this.greetingBars.computeIfAbsent(player.getUUID(), id -> {
-            return BossBar.bossBar(translatable("adventure.test.greeting", NamedTextColor.GOLD, this.adventure().toAdventure(player.getDisplayName())),
+            return BossBar.bossBar(translatable("adventure.test.greeting", NamedTextColor.GOLD, player.getDisplayName()),
               1, BossBar.Color.YELLOW, BossBar.Overlay.PROGRESS);
           });
 
@@ -261,10 +257,8 @@ public class AdventureTester implements ModInitializer {
           .clickEvent(openFile(path.toString()))
           .build();
 
-        final FabricClientAudiences clientAudiences = FabricClientAudiences.of();
-        final Audience audience = clientAudiences.audience();
-        audience.sendMessage(message);
-        //ctx.getSource().sendFeedback(clientAudiences.toNative(message)); // Works as well!
+        ctx.getSource().getPlayer().sendMessage(message);
+        // ctx.getSource().sendFeedback(FabricClientAudiences.get().toNative(message)); // Works as well!
 
         return Command.SINGLE_SUCCESS;
       })));
@@ -300,7 +294,7 @@ public class AdventureTester implements ModInitializer {
           b.append(newline());
         }
         first = false;
-        b.append(this.adventure().toAdventure(player.getDisplayName()));
+        player.get(Identity.DISPLAY_NAME).ifPresent(b::append);
       }
     }));
     return text().content(players.size() + " players")
@@ -348,23 +342,14 @@ public class AdventureTester implements ModInitializer {
   }
 
   static TextColor textColor(final BossBar.Color barColor) {
-    switch (barColor) {
-      case PINK:
-        return NamedTextColor.LIGHT_PURPLE;
-      case BLUE:
-        return NamedTextColor.BLUE;
-      case RED:
-        return NamedTextColor.RED;
-      case GREEN:
-        return NamedTextColor.GREEN;
-      case YELLOW:
-        return NamedTextColor.YELLOW;
-      case PURPLE:
-        return NamedTextColor.DARK_PURPLE;
-      case WHITE:
-        return NamedTextColor.WHITE;
-      default:
-        throw new IllegalArgumentException("Unknown color " + barColor);
-    }
+    return switch (barColor) {
+      case PINK -> NamedTextColor.LIGHT_PURPLE;
+      case BLUE -> NamedTextColor.BLUE;
+      case RED -> NamedTextColor.RED;
+      case GREEN -> NamedTextColor.GREEN;
+      case YELLOW -> NamedTextColor.YELLOW;
+      case PURPLE -> NamedTextColor.DARK_PURPLE;
+      case WHITE -> NamedTextColor.WHITE;
+    };
   }
 }
